<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_primary"
    tools:context=".ui.fragments.EntryFragment">

    <TextView
        android:id="@+id/main_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/entry_title_label"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25"
        tools:ignore="UnusedAttribute" />

    <TextView
        android:id="@+id/desc_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/enter_your_name"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/main_label"
        app:layout_constraintStart_toStartOf="@id/main_label"
        app:layout_constraintTop_toBottomOf="@id/main_label" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_player1"
        style="@style/MyTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="25dp"
        android:hint="@string/player1_hint"
        android:textColorHint="@color/white"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/desc_label"
        app:placeholderTextColor="@color/white"
        app:startIconDrawable="@drawable/ic_user"
        app:startIconTint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_player1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="12"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_player2"
        style="@style/MyTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="25dp"
        android:hint="@string/player2_hint"
        android:textColorHint="@color/white"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_player1"
        app:startIconDrawable="@drawable/ic_user"
        app:startIconTint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_player2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="12"
            android:imeOptions="actionDone"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/play_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/button_background"
        android:text="@string/entry_title_label"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_player2" />

</androidx.constraintlayout.widget.ConstraintLayout>