<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/entryFragment">

    <fragment
        android:id="@+id/entryFragment"
        android:name="com.kata.tictactoe.ui.fragments.EntryFragment"
        android:label="@string/entry"
        tools:layout="@layout/fragment_entry" >
        <action
            android:id="@+id/action_entryFragment_to_gameFragment"
            app:destination="@id/gameFragment" />
    </fragment>
    <fragment
        android:id="@+id/gameFragment"
        android:name="com.kata.tictactoe.ui.fragments.GameFragment"
        android:label="@string/game_label"
        tools:layout="@layout/fragment_game" >
        <argument
            android:name="player1Name"
            app:argType="string" />
        <argument
            android:name="player2Name"
            app:argType="string" />
    </fragment>
</navigation>